New files added to FEML_Codes!

--- a/Machine Learning/FEML_Codes/04.02-Mean-Median-Imputation.ipynb
+++ b/Machine Learning/FEML_Codes/04.02-Mean-Median-Imputation.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "## Mean / Median imputation\n",
     "\n",
-    "Imputation is the act of replacing missing data with statistical estimates of the missing values. Its goal is to produce a **complete dataset**. If the variable has a **Gaussian distribution**, we replace by the **mean**, if the variable has a **skewed distribution** by **median**. Replacing missing data by the mode is not common practice for  numerical variables. For **discrete variables** casted as 'int' (to save memory), the mean may not be an integer, therefore the whole variable will be re-casted as 'float'. In order to avoid this behaviour, **we can replace NA with the median instead**. The median will inevitably be an integer / discrete value as well. **The mean and median can only be calculated on continuous or discrete numerical variables, only.** Data should be missing completely at random (MCAR).\n",
+    "**Imputation** is the act of **replacing missing data with statistical estimates** of the missing values. Its goal is to produce a **complete dataset**. If the variable has a **Gaussian distribution**, we replace by the **mean**, if the variable has a **skewed distribution** by **median**. Replacing missing data by the mode is not common practice for  numerical variables. For **discrete variables** casted as 'int' (to save memory), the mean may not be an integer, therefore the whole variable will be re-casted as 'float'. In order to avoid this behaviour, **we can replace NA with the median instead**. The median will inevitably be an integer / discrete value as well. **The mean and median can only be calculated on continuous or discrete numerical variables, only.** Data should be missing completely at random (MCAR).\n",
     "\n",
     "It is easy to implement and fast. It can be integrated in production (during model deployment). But **it distorts the original variable distribution and variance*, and also the covariance** with the remaining variables of the dataset. It can **increase outliers**. If data is **missing completely at random** and **no more than 5% **of the variable contains missing data, we can use it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "4         0  25.0000  151.5500"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -162,7 +162,7 @@
        "((916, 2), (393, 2))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "28.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "30.23144399460189"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "1284   NaN    8.0500        28.0      30.2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -481,16 +481,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2dde06af220>"
+       "<matplotlib.legend.Legend at 0x24a228acf40>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "Age_mean     110.198311  194.159033  157.035694  157.021707"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -824,13 +824,13 @@
        "4       2198       2000.0         192     250000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('C:\\\\Users\\\\husey\\\\Desktop\\\\python\\\\udemy\\\\6.FeatureEngineeringForML\\\\HousingPrices_train.csv', usecols=cols_to_use)\n",
+    "data = pd.read_csv('HousingPrices_train.csv', usecols=cols_to_use)\n",
     "print(data.shape)\n",
     "data.head()"
    ]
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -855,7 +855,7 @@
        "['LotFrontage', 'MasVnrArea', 'GarageYrBlt']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "((1022, 10), (438, 10))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -964,22 +964,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\husey\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:1773: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_single_column(ilocs[0], value, pi)\n"
-     ]
-    }
-   ],
+   "execution_count": 44,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "median = X_train['LotFrontage'].median()\n",
     "X_train.loc[:,'LotFrontage_median'] = impute_na(X_train, 'LotFrontage', median)\n",
@@ -988,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,16 +1006,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2dddff3f7f0>"
+       "<matplotlib.legend.Legend at 0x24a2442bfd0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1061,16 +1050,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2dde089cdc0>"
+       "<matplotlib.legend.Legend at 0x24a22ad62e0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1105,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -1113,10 +1102,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2dde12b9280>"
+       "<matplotlib.legend.Legend at 0x24a2452c3a0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1151,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1533,7 @@
        "GarageYrBlt_median       1.115572e+03          591.335688  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1560,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1594,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1592,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1626,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1624,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
